--- a/index.html
+++ b/index.html
@@ -11,9 +11,100 @@
     <header>
       <h1>Mi nueva biografia</h1>
     </header>
-    <nav></nav>
-    <aside></aside>
-    <main></main>
-    <footer></footer>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="acerca.html">Acerca de mí</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+      <form action="">
+        <input type="text" />
+        <button>Buscar...</button>
+      </form>
+    </nav>
+    <div class="container">
+      <aside>
+        <h3>Samuel Daza</h3>
+        <img src="https://picsum.photos/200/200" alt="" />
+        <p>
+          Estudiante de ingenieria electronica, y estudiante de desarrollo
+          backend
+        </p>
+      </aside>
+      <main>
+        <h3>Descripción</h3>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
+            similique error id molestias, magnam suscipit aut reprehenderit,
+            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
+            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
+            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
+            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
+            adipisci atque perspiciatis temporibus incidunt error, placeat odit
+            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
+            doloribus dolorum impedit dolor esse eaque exercitationem neque
+            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
+            numquam nostrum sit?
+          </p>
+        </article>
+        <h3>Experiencia</h3>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
+            similique error id molestias, magnam suscipit aut reprehenderit,
+            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
+            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
+            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
+            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
+            adipisci atque perspiciatis temporibus incidunt error, placeat odit
+            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
+            doloribus dolorum impedit dolor esse eaque exercitationem neque
+            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
+            numquam nostrum sit?
+          </p>
+        </article>
+        <h3>Educación</h3>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
+            similique error id molestias, magnam suscipit aut reprehenderit,
+            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
+            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
+            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
+            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
+            adipisci atque perspiciatis temporibus incidunt error, placeat odit
+            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
+            doloribus dolorum impedit dolor esse eaque exercitationem neque
+            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
+            numquam nostrum sit?
+          </p>
+        </article>
+        <h3>Intereses</h3>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
+            similique error id molestias, magnam suscipit aut reprehenderit,
+            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
+            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
+            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
+            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
+            adipisci atque perspiciatis temporibus incidunt error, placeat odit
+            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
+            doloribus dolorum impedit dolor esse eaque exercitationem neque
+            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
+            numquam nostrum sit?
+          </p>
+        </article>
+      </main>
+    </div>
+    <footer>
+      <img src="https://picsum.photos/100/100" alt="" />
+      <ul>
+        <li>Mis redes sociales</li>
+        <li>Contacto</li>
+      </ul>
+      <p>Todos los derechos reservados. 2023</p>
+    </footer>
   </body>
 </html>
