biografia semantica fin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <aside>
         <h3>Samuel Daza</h3>
-        <img src="https://picsum.photos/200/200" alt="" />
+        <img src="foto.jpg" alt="" />
         <p>
           Estudiante de ingenieria electronica, y estudiante de desarrollo
           backend
@@ -35,74 +35,59 @@
         <h3>Descripción</h3>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
-            similique error id molestias, magnam suscipit aut reprehenderit,
-            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
-            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
-            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
-            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
-            adipisci atque perspiciatis temporibus incidunt error, placeat odit
-            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
-            doloribus dolorum impedit dolor esse eaque exercitationem neque
-            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
-            numquam nostrum sit?
+            Estudiante de ingenieria electronica y actualmente estudiante de
+            desarrollo backend intermedio en la universidad distrital Francisco
+            Jose de Caldas. Me apasiona bastante el tema tecnologico y explorar
+            cada dia las nuevas herramientas que van surgiendo en el campo.
+            Actualmente trabajo en GreenMovil Colombia en donde pertenezco al
+            area de tecnologia.
           </p>
         </article>
-        <h3>Experiencia</h3>
+        <h3>Experiencia profesional</h3>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
-            similique error id molestias, magnam suscipit aut reprehenderit,
-            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
-            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
-            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
-            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
-            adipisci atque perspiciatis temporibus incidunt error, placeat odit
-            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
-            doloribus dolorum impedit dolor esse eaque exercitationem neque
-            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
-            numquam nostrum sit?
+            GreenMovil <br />
+            Actualmente trabajo para la empresa Transmilenio en el area de
+            tecnologia, en donde realizo lobores de soporte tecnologico a los
+            buses electricos zonales en la localidad de fontibon.
+            <br />
+            <br />
+            DASHFLEET <br />
+            - Instalación, configuración, diagnóstico y reparación de equipos de
+            audio y video CCTV, control acceso, alarmas, CAN bus, mantenimiento
+            configuración instalación NVR, switch y DVR.
           </p>
         </article>
         <h3>Educación</h3>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
-            similique error id molestias, magnam suscipit aut reprehenderit,
-            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
-            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
-            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
-            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
-            adipisci atque perspiciatis temporibus incidunt error, placeat odit
-            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
-            doloribus dolorum impedit dolor esse eaque exercitationem neque
-            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
-            numquam nostrum sit?
+            Ingenieria Electronica - UNAD - (aplazado) <br />
+            Desarrollo de backen intermedio (universidad francisco jose de
+            caldas)(en curso) <br />
+            Diplomado en desarrollo de software (universidad tecnologica de
+            pereira)
           </p>
         </article>
         <h3>Intereses</h3>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
-            similique error id molestias, magnam suscipit aut reprehenderit,
-            quasi explicabo ex minima excepturi cupiditate nam! Magnam tempore
-            laborum nam? Minima, inventore. Assumenda, recusandae? Officia, illo
-            sed laudantium, voluptas soluta, molestiae quo itaque harum eos
-            consequatur quidem? Molestiae, nisi commodi velit, doloribus ut
-            adipisci atque perspiciatis temporibus incidunt error, placeat odit
-            quam. Est provident atque sapiente quibusdam, corporis culpa dolorem
-            doloribus dolorum impedit dolor esse eaque exercitationem neque
-            sequi maiores illum modi assumenda autem eius hic quae nostrum! Quis
-            numquam nostrum sit?
+            Generalmente los fines de semana me gusta salir a montar en
+            bicicleta con mis amigos alrededor de los pueblos de cundinamarca,
+            conociendo sus paisajes y gastronomia😀.
           </p>
         </article>
       </main>
     </div>
     <footer>
-      <img src="https://picsum.photos/100/100" alt="" />
+      <img src="https://img.icons8.com/?size=512&id=13930&format=png" alt="" />
       <ul>
-        <li>Mis redes sociales</li>
-        <li>Contacto</li>
+        <li>Mis redes sociales 👉</li>
+        <br />
+        <li>
+          <a href="http://www.linkedin.com/in/samueldazadaza/" title="linkedin"
+            >linkedin</a
+          >
+        </li>
       </ul>
       <p>Todos los derechos reservados. 2023</p>
     </footer>
