--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
       </main>
     </div>
     <footer>
-      <img src="https://img.icons8.com/?size=512&id=13930&format=png" alt="" />
+      <img
+        id="linkedin"
+        src="https://img.icons8.com/?size=512&id=13930&format=png"
+        alt=""
+      />
       <ul>
         <li>Mis redes sociales 👉</li>
         <br />
